// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display a success message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-success"
  >
    Success!!!!
  </div>
</DocumentFragment>
`;

exports[`display an error message 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`does not render an error or a success message if message props is empty 1`] = `[Function]`;
